--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker_test"
-  env: "DockerTest-env"
+  env: "DockerTest-env-1"
   bucket_name: "elasticbeanstalk-us-east-2-733715254555"
   bucket_path: "docker_test"
   on:
